# xfce4-soundmenu-plugin

./: .gitignore  AUTHORS  COPYING.LIB  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac.in
icons/: Makefile.am
icons/128x128/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  containermenuitem.c  containermenuitem.h  libmpris2client.c  libmpris2client.h  libmpris2control.c  libmpris2control.h  mpris2-metadata.c  mpris2-metadata.h  mpris2-utils.c  mpris2-utils.h  pragha-dialogs.c  pragha.c  pragha.desktop  pragha.desktop.in.in  pragha.h  soundmenu-album-art.c  soundmenu-album-art.h  soundmenu-controls.c  soundmenu-controls.h  soundmenu-dbus.c  soundmenu-dbus.h  soundmenu-dialog-hig.c  soundmenu-dialog-hig.h  soundmenu-dialogs.c  soundmenu-dialogs.h  soundmenu-keybinder.c  soundmenu-keybinder.h  soundmenu-lastfm.c  soundmenu-lastfm.h  soundmenu-metadata.c  soundmenu-metadata.h  soundmenu-mpris2.c  soundmenu-mpris2.h  soundmenu-notify.c  soundmenu-notify.h  soundmenu-panel-plugin.c  soundmenu-panel-plugin.h  soundmenu-plugin.c  soundmenu-plugin.h  (+10 more)
po/: POTFILES  POTFILES.in  es.po  xfce4-soundmenu-plugin.pot
